argo-cd/uat-argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argo-cd
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - host: uat-argocd.asseto.ai   # replace with your DNS or IP-based domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-server
            port:
              number: 80         # recommend 80 unless you specifically need 443
